# Inertial-navigation-system-using-raspbbery-pico

gui/: inertial.py  main.py  pomiar3.csv
gui/qml/: main.qml
odczyt/: dane.txt  main.py  notatki.txt  opis.txt  pomiar1.txt  pomiar2.txt  pomiar3.txt  pomiar4.txt
odczyt/kod do pico/: main.py
raspbbery/: CMakeLists.txt  main.c  pico_mpu.c  pico_mpu.h
testy/: main.py  pomiar1.csv  pomiar2.csv  pomiar3.csv  pomiar4.csv
